docs(composer): 更新项目描述- 在 composer.json 文件中添加了项目描述信息 - 描述了项目的简单功能和基于的框架- 增加了对分布式锁特性的简要说明

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php",
         "hyperf"
     ],
-    "description": "",
+    "description": "一个简单的Redis分布式锁的实现 基于Hyperf框架。本扩展实现了基本的分布式锁，支持阻塞式分布式锁和非阻塞式分布式锁。",
     "autoload": {
         "psr-4": {
             "Msmm\\HyperfRedisLock\\": "src/"
